# raiti3

./: Cargo.toml  README.md
data/keyboards/: pc_querty.yaml  querty.yaml
src/: common.rs  config.rs  keyboard_config.rs  main.rs  prelude.rs
src/config/: environment.rs  mod.rs
src/widgets/: key.rs  keyboard.rs  main_layout.rs  mod.rs  text_box.rs
