[package]
name = "raiti3"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.0.1", features = ["from"]}
dirs-next = "2.0.0"
sdl2 = {version = "0.37.0", features = ["gfx"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
serde_yaml = { version = "0.9.34" }
